# micronuts

./: .beads  .gitignore  Cargo.toml  LICENSE-0BSD.txt  README.md
.cargo/: config.toml
.github/workflows/: boot-splash-preview.yml  rust-ci.yml
.sisyphus/: integration-report.md
cashu-core-lite/: AGENTS.md  Cargo.toml  PORTING_STATUS.md
cashu-core-lite/src/: crypto.rs  error.rs  keypair.rs  lib.rs  rpc.rs  token.rs  transport.rs  wallet.rs
cashu-core-lite/src/nuts/: mod.rs  nut00.rs  nut01.rs  nut02.rs  nut03.rs  nut04.rs  nut05.rs  nut06.rs  nut07.rs  nut13.rs
cashu-core-lite/tests/: blind_unblind.rs  cashu_compat.rs  crypto.rs  hash_to_curve.rs  rpc.rs  token.rs
docs/: ARCHITECTURE.md  BOOT-SPLASH.md  DEMO-FLOW.md  GM65-PROTOCOL-FINDINGS.md  HOST-MINT-TOOL.md  MINT-WALLET-DEMO.md  QR-SCANNER-DESIGN.md  QR-SCANNER.md
firmware/: AGENTS.md  Cargo.toml  build.rs  memory.x
firmware/.cargo/: config.toml
firmware/src/: boot_splash.rs  boot_splash_assets.rs  build_info.rs  display.rs  firmware_state.rs  hardware_impl.rs  lib.rs  main.rs  prng.rs  self_test.rs  uart_log.rs  usb.rs
firmware/src/qr/: decoder.rs  driver.rs  mod.rs  protocol.rs
host-mint-tool/: AGENTS.md  Cargo.toml
host-mint-tool/src/: main.rs  mint.rs  protocol.rs  usb.rs
micronuts-app/: AGENTS.md  Cargo.toml
micronuts-app/examples/: native_sim.rs
micronuts-app/src/: command_handler.rs  display.rs  hardware.rs  lib.rs  protocol.rs  state.rs  util.rs
micronuts-app/src/qr/: mod.rs
micronuts-fips-bridge/: Cargo.toml
micronuts-fips-bridge/src/: lib.rs
micronuts-mint/: Cargo.toml
micronuts-mint/src/: demo_roles.rs  direct_transport.rs  keyset.rs  lib.rs  loopback_transport.rs  mint_core.rs  rpc_service.rs
micronuts-mint/tests/: e2e.rs  mint_role.rs  rpc_loopback.rs
scripts/: generate_assets.py  render_preview.py
tests/: defmt_usb_experiment.py  flash_and_test.sh  test_usb_variant.sh  usb_stress_test.py
usb-test-no-defmt/: Cargo.toml  build.rs
usb-test-no-defmt/.cargo/: config.toml
usb-test-no-defmt/src/: main.rs
