[workspace]
resolver = "2"
members = [
    "firmware",
    "cashu-core-lite",
    "host-mint-tool",
    "micronuts-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/Amperstrand/micronuts"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]

[workspace.dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }

minicbor = { version = "0.25", default-features = false, features = ["derive", "alloc"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-hal = "1.0"
embedded-graphics = "0.8"

stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc", rev = "89d22c69ac582602d33170902da2c22b12ef3d75" }

qrcodegen-no-heap = "1.8"

gm65-scanner = { git = "https://github.com/Amperstrand/gm65-scanner", rev = "df13690bb50167d55b3531ec3fb3b93920da14e7", features = ["sync", "defmt"] }

[profile.release]
debug = true
lto = true
opt-level = "s"
strip = "none"
split-debuginfo = "off"
