[workspace]
resolver = "2"
members = [
    "firmware",
    "cashu-core-lite",
    "host-mint-tool",
    "micronuts-app",
    "micronuts-mint", "micronuts-fips-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/Amperstrand/micronuts"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]

[workspace.dependencies]
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }

minicbor = { version = "0.25", default-features = false, features = ["derive", "alloc"] }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
embedded-hal = "1.0"
embedded-graphics = "0.8"
embedded-io = "0.7"
embedded-io-async = "0.7"
gm65-scanner = { git = "https://github.com/Amperstrand/gm65-scanner", rev = "85734ba" }
qrcodegen-no-heap = "1.8.1"

# Embassy — pinned to upstream 84444a19 (same as BSP)
# To test USB fix variants, use: ./tests/test_usb_variant.sh <branch-name>
embassy-time = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time", rev = "84444a19" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", rev = "84444a19" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", package = "embassy-stm32", rev = "84444a19" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb", rev = "84444a19" }
embassy-usb-synopsys-otg = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb-synopsys-otg", rev = "84444a19" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", package = "embassy-sync", rev = "84444a19" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", package = "embassy-futures", rev = "84444a19" }

# Embassy BSP for STM32F469I-Discovery (display, SDRAM, touch)
embassy-stm32f469i-disco = { git = "https://github.com/Amperstrand/embassy-stm32f469i-disco", rev = "a407fcd" }

linked_list_allocator = "0.10"
static_cell = "2.1"
heapless = "0.8"
critical-section = "1.2"

[profile.release]
debug = true
lto = true
opt-level = "s"
strip = "none"
split-debuginfo = "off"
panic = "abort"
