[package]
name = "firmware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-02 = { workspace = true }
embedded-graphics = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
heapless = { workspace = true }
gm65-scanner = { workspace = true }
qrcodegen-no-heap = { workspace = true }
cashu-core-lite = { path = "../cashu-core-lite" }
micronuts-app = { path = "../micronuts-app" }
static_cell = { workspace = true }
critical-section = { workspace = true }
linked_list_allocator = { workspace = true }
k256 = { workspace = true }
sha2 = { workspace = true }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand_core = { workspace = true }
nb = { workspace = true }

# Embassy
embassy-stm32 = { workspace = true, features = ["stm32f469ni", "time-driver-any", "exti", "defmt"] }
embassy-time = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-usb = { workspace = true }
embassy-usb-synopsys-otg = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }

# Embassy BSP
embassy-stm32f469i-disco = { workspace = true, features = ["display", "touch"] }

# Touch controller
ft6x06 = { git = "https://github.com/Amperstrand/ft6x06", rev = "2ed36f74d6b52e8ff68533c01a50d81800ae10b4" }

# USB CDC


[features]
default = ["defmt"]
defmt = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "gm65-scanner/defmt", "embassy-stm32/defmt", "embassy-time/defmt", "embassy-executor/defmt"]
