[package]
name = "host-mint-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Demo mint signer for Micronuts hardware wallet"

[[bin]]
name = "mint-tool"
path = "src/main.rs"

[dependencies]
cashu-core-lite = { path = "../cashu-core-lite" }
clap = { version = "4", features = ["derive"] }
serialport = "4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha2 = "0.10"
rand = "0.8"
