[package]
name = "micronuts-fips-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cashu-core-lite = { path = "../cashu-core-lite", features = ["std"] }
minicbor = { workspace = true, features = ["std"] }

[dev-dependencies]
micronuts-mint = { path = "../micronuts-mint" }
