[package]
name = "usb-test-no-defmt"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
static_cell = { workspace = true }
embassy-stm32 = { workspace = true, features = ["stm32f469ni", "time-driver-any", "exti"] }
embassy-time = { workspace = true }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread"] }
embassy-usb = { workspace = true }
embassy-usb-synopsys-otg = { workspace = true }
embassy-futures = { workspace = true }
